--- a/style.css
+++ b/style.css
@@ -1,5 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&family=Eczar&family=Inter:wght@400;500;600;700&family=Neonderthaw&family=Open+Sans:ital,wght@1,400;1,500;1,700&family=Pacifico&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,800&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,500&family=Rubik+Beastly&display=swap");
 
+:root {
+  --md-dark-color: #1d1d1d;
+  --dark-color: #171717;
+  --light-dark-color: #292929;
+  --yellow-color: #d4aa11;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Inter", sans-serif;
+}
+
+a {
+  text-decoration: none;
 }
